customize-tracing-tag/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          tracing:
            custom_tags:
              - tag: custom-tag-header
                request_header: 
                  name: customtag_header
                  default_value: customtag_header
              - tag: number-size
                request_header: 
                  name: Number-Size
                  default_value: NaN
              - tag: number-size
                request_header:
                  name: number_size
                  default_value: NaN
              - tag: custom-tag-env
                environment:
                  name: CUSTOMTAG_ENV
                  default_value: customtag_env
              # - tag: custom-tag-metadata
              #   metadata: 
              #     kind: 
              #     metadata_key:
              #     default_value: 
            provider:
              name: envoy.tracers.opentelemetry
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                grpc_service:
                  envoy_grpc:
                    cluster_name: jaeger
                  timeout: 0.250s
                service_name: helloworld-svc
          codec_type: AUTO
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    code:
                      local:
                        filename: "/etc/wasm/main.wasm"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: helloworld
            virtual_hosts:
            - name: helloworld
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: helloworld
                decorator:
                  operation: routeToService1
  clusters:
  - name: helloworld
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: helloworld
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld
                port_value: 8002

  - name: jaeger
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 4317

admin:
  # access_log_path: "/var/log/envoy/envoy-admin.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
